update de arquivos e páginas

--- a/facebook.html
+++ b/facebook.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-facebook.jpg" alt="Facebook">
-    <a href="https://www.facebook.com/gustavoguanabara/?locale=pt_BR" target="_blank">Acesse</a>
+    <img src="imagens/facebook2.png" alt="Facebook">
+    <a href="https://www.facebook.com/profile.php?id=61552837485080&locale=pt_BR" target="_blank">Acesse</a>
     
 </body>
 </html>
