--- a/home.html
+++ b/home.html
@@ -4,22 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <style>
-    * {
-        margin: 0px;
-        padding: 0px;
-    }
-
-    body {
-        width: 100vw;
-        height: 100vw;
-        background:black url('imagens2/elenilson.jpeg') no-repeat top center;
-        background-size: cover;
-    }
-</style>
+    <link rel="stylesheet" href="estilos/social.css">
+    
 </head>
 
 <body>
-    
+    <img src="imagens/elenilson.jpeg" alt="Home">
 </body>
 </html>
