--- a/github.html
+++ b/github.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <img src="imagens/tela-github.jpg" alt="git-hub">
-    <a href="https://github.com/gustavoguanabara" target="_blank">ACESSE</a>
+    <a href="#" >ACESSE</a>
 </body>
 </html>
