--- a/youtube.html
+++ b/youtube.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <img src="imagens/tela-youtube.png" alt="youtube">
-    <a href="https://www.youtube.com/@cursoemvideo/playlists" target="_blank">ACESSE</a>
+    <a href="#" >ACESSE</a>
 </body>
 </html>
