update de imagens
Redimensionei e mudei a resolução e tamanho das imagens

--- a/facebook.html
+++ b/facebook.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/facebook2.png" alt="Facebook">
+    <img src="imagens/facebook2.jpeg" alt="Facebook">
     <a href="https://www.facebook.com/profile.php?id=61552837485080&locale=pt_BR" target="_blank">Acesse</a>
     
 </body>
